# scipion-chem

./: .gitattributes  .gitignore  .sonarcloud.properties  CHANGES.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  build.yml  publish-and-tag.yml  publish_and_tag.yml  release.yml
Proteina-Ig/: model_0.cif  model_0.cif:Zone.Identifier  test_AB_interaction.pdb:Zone.Identifier
atomstructutilsWeb/: objects.py  protocols.conf
atomstructutilsWeb/protocols/: __init__.py  protocol_dali.py  protocol_ena_download.py  protocol_listIDs_operate.py  protocol_listIDs_unique.py  protocol_pdb_smallMolecules.py  protocol_pdb_smallMolecules_toPDB.py  protocol_pdb_uniprot.py  protocol_smallMolecules_pdb.py  protocol_uniprot_crossref.py  protocol_uniprot_download.py
atomstructutilsWeb/viewers/: __init__.py  viewer_protocol_dali.py  viewers_data.py
bioinformatics/: __init__.py  bibtex.py  objects.py  protocols.conf
bioinformatics/protocols/: __init__.py  protocol_Cquark.py  protocol_ZINC_filter.py  protocol_ZL_predict.py  protocol_autodock.py  protocol_dali.py  protocol_ena_download.py  protocol_import_smallMolecules.py  protocol_listIDs_operate.py  protocol_list_operate.py  protocol_pdb_smallMolecules.py  protocol_pdb_uniprot.py  protocol_preparation_ligands.py  protocol_raptorX.py  (+5 more)
pwchem/: __init__.py  bibtex.py  constants.py  install_helper.py  objects.py  protocols - Shortcut.lnk  protocols.conf  requirements_rdkit.txt  runAllTests.py  runTests.py  skippableTests.json  testData.json
(+325 files in other folders)
